--- a/blog.html
+++ b/blog.html
@@ -28,14 +28,15 @@
     <div class="container">
         <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
         <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div>
-		<img class="imginvert disappear" style="position:absolute; right:400px; padding-top:100px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png">
+		<!-- <img class="imginvert disappear" style="position:absolute; right:400px; padding-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png"> z-index:-1; -->
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png">
         <!-- <p style="font-size: 22px"> -->
         <p style="font-size:22px">
             <b class="heading">Halaman 1 dari 3</b>
             <br><br>
-            Cerita dan pengalaman saya yang pernah dirasakan.<br>
-            Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
-            Inilah beberapa cerita yang ada di blog ini.
+            Inilah halaman Blog dan Cerita, dimana berisi cerita dan pengalaman saya yang pernah dirasakan. Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.
+			Inilah beberapa cerita dengan pengalamannya baik keluarga, teman, atau sendiri yang ada dan tertulis di blog ini.
+			Selain itu, halaman blog ini juga menyediakan fakta yang berisi informasi yang berguna terhadap pengetahuan dan wawasan untuk kedepannya, seperti fakta, cerita, berita, dan pembahasan.
         </p>
         <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width:700px;">
@@ -284,6 +285,11 @@
         <p class="heading" id="6" style="font-size: 25px"><b>6. Pemenang Karya Video Sekolah dari Hari Pendidikan Nasional</b></p>
         <div class="container2">            
             <!-- <p>[Under Construction]</p><br> -->
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img009" src="images/juara-1-film-pendek-tingkat-kota-semarang.jpg">
+                <div class="desc" id="img009d">Gambar 9: Juara 1 Film Pendek Tingkat Kota Semarang 2024 - Thumbnail Youtube</div>
+            </div>
+			<div class="clearfix"></div><br>
             Link video di Youtube <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.youtube.com/watch?v=v1bll077CUE">Juara 1 Lomba Short Movie Competition 2024</a><br>
             Link channel: <a class="link" href="https://www.youtube.com/@EagleSchoolSemarang">Eagle School Semarang</a>
             <br><br><br>
@@ -309,8 +315,55 @@
         </div>
 
         <p class="heading" id="8" style="font-size: 25px"><b>8. Sejarah selama sekolah di Eagle School</b></p>
+		<div class="container2">            
+            <!-- <p>[Under Construction]</p><br> -->
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img010" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img010d">Gambar 10</div>
+            </div>
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img011" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img011d">Gambar 11</div>
+            </div>
+			<div class="clearfix"></div><br>
+            Di kelas 7, Devan melanjutkan di sekolah PKBM Eagle School Semarang dengan fasilitas pelajaran dan talent yang lengkap.
+			<br><br>
+			<span class="color007">[Under Construction]</span>
+            <br><br><br>
+        </div>
+		
         <p class="heading" id="9" style="font-size: 25px"><b>9. Holiday to Jakarta & Bandung</b></p>
+		<div class="container2">            
+            <!-- <p>[Under Construction]</p><br> -->
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img012" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img012d">Gambar 12</div>
+            </div>
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img013" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img013d">Gambar 13</div>
+            </div>
+			<div class="clearfix"></div><br>
+            <span class="color007">[Under Construction]</span>
+            <br><br><br>
+        </div>
+        <br>
+		
         <p class="heading" id="10" style="font-size: 25px"><b>10. Cerita tentang Talent dengan programnya</b></p>
+		<div class="container2">            
+            <!-- <p>[Under Construction]</p><br> -->
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img014" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img014d">Gambar 14</div>
+            </div>
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img015" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img015d">Gambar 15</div>
+            </div>
+			<div class="clearfix"></div><br>
+            <span class="color007">[Under Construction]</span>
+            <br><br><br>
+        </div>
         <br>
 
         <!-- <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK</b></u></p> -->
@@ -356,7 +409,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 7 Mei 2024<br> -->
-		Terakhir diupdate: 9 Desember 2025<br>
+		Terakhir diupdate: 14 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
