--- a/blog2.html
+++ b/blog2.html
@@ -26,12 +26,13 @@
     </div>
     <div class="container">
         <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png">
         <p style="font-size:22px">
             <b class="heading">Halaman 2 dari 3</b>
             <br><br>
-            Cerita dan pengalaman saya yang pernah dirasakan.<br>
-            Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
-            Inilah beberapa cerita yang ada di blog ini.
+            Inilah halaman Blog dan Cerita, dimana berisi cerita dan pengalaman saya yang pernah dirasakan. Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.
+			Inilah beberapa cerita dengan pengalamannya baik keluarga, teman, atau sendiri yang ada dan tertulis di blog ini.
+			Selain itu, halaman blog ini juga menyediakan fakta yang berisi informasi yang berguna terhadap pengetahuan dan wawasan untuk kedepannya, seperti fakta, cerita, berita, dan pembahasan.
         </p>
         <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width:700px;">
@@ -43,7 +44,7 @@
             4. <a href="#4">Retreat Eagle School 2023</a><br>
             5. <a href="#5">Holiday to Bali</a> -->
             <ol start="11">
-                <li><a class="link" href="#11">Bahasa Pemrograman dan Hubungannya dengan AI</a></li>
+                <li><a class="link" href="#11">Hubungan Matematika dan Coding dengan AI</a></li>
 				<li><a class="link" href="#12">Pengembangan dalam Pelajaran Matematika yang Luas</a></li>
 				<li><a class="link" href="#13">Sejarah dan Pengaruh Mobil Listrik di Dunia</a></li>
 				<li><a class="link" href="#14">Holiday to Surabaya & Malang</a></li>
@@ -51,27 +52,55 @@
 				<li><a class="link" href="#16">Pengalaman saat Lomba Matematika KMNR dan IKMC 2025</a></li>
 				<li><a class="link" href="#17">Pengalaman saat Lomba Matematika LMNAS UGM 2025</a></li>
 				<li><a class="link" href="#18">Pengalaman saat Lomba Matematika LOGIKA UI 2025</a></li>
-				<li><a class="link" href="#19">...</a></li>
-				<li><a class="link" href="#20">...</a></li>
+				<li><a class="link" href="#19">Keistimewaan dalam Matematika</a></li>
+				<li><a class="link" href="#20">Sejarah Profil Lainnya</a></li>
             </ol>
             </p>
         </div>
         <br>
         
         <p class="heading color003" style="font-size:30px;"><u><b>BEBERAPA CERITA</b></u></p>
-        <p class="heading" id="11" style="font-size:25px"><b>11. Bahasa Pemrograman dan Hubungannya dengan AI</b></p>
+        <p class="heading" id="11" style="font-size:25px"><b>11. Hubungan Matematika dan Coding dengan AI</b></p>
 		<div class="container2">
-			First, we departed from <div class="tooltip">Semarang<span class="tooltiptext" id="desc01"></span></div> to <b>Batu Malang</b> by car. Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
+		    <div class="gallery" style="width:300px;">
+                <img class="image" id="img016" src="images/istockphoto-966248982-612x612.jpg">
+                <div class="desc" id="img016d">Gambar 16: Ilustrasi Kecerdasan Buatan (AI) (Credit: Pexels)</div>
+            </div>
+			<div class="gallery" style="width:250px;">
+                <img class="image" id="img017" src="images/openai-logo.jpg">
+                <div class="desc" id="img017d">Gambar 17</div>
+            </div>
+			<div class="gallery" style="width:200px;">
+                <img class="image" id="img018" src="images/python.png">
+                <div class="desc" id="img018d">Gambar 18</div>
+            </div>
+			<div class="gallery" style="width:200px;">
+                <img class="image" id="img019" src="images/html.png">
+                <div class="desc" id="img019d">Gambar 19</div>
+            </div>
+			<div class="clearfix"></div><br>
+			Di zaman teknologi yang berkembang pesat ada salah satunya yang menonjol, yaitu Kecerdasan Buatan atau Artificial Intelligence (AI).
+			Kecerdasan Buatan adalah kecerdasan yang ditambahkan kepada suatu sistem yang bisa diatur dalam konteks ilmiah, AI juga didefinisikan sebagai kecerdasan entitas ilmiah (dari Wikipedia).
+			Ia juga bisa dipakai untuk mengerjakan dan menyelesaikan tugas, termasuk tugas matematika dan coding. Untuk ilmu matematika akan dibahas di blog berikutnya.
 			<br><br>
-			Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
+			Bahasa pemrograman yang populer saat ini adalah Python dan HTML. Untuk Python digunakan untuk menghitung dalam matematika dan menganalisis data dalam Data Science.
+			Bahasa Python ternyata erat hubungannya dengan Artificial Intelligence (AI), dimana membutuhkan model yang terbaik dan akurat dari Data Science yang sudah diproses sebelumnya dengan evaluasi dan validasi.
+			Chat AI paling populer saat ini adalah ChatGPT (dirilis tahun 2022) dan Gemini (dirilis tahun 2023), dimana cara kerjanya mirip dengan yang sudah disebutkan sebelumnya.
+			Selanjutnya, HTML dibuat untuk membuat website yang kita lihat sekarang, ditambah dengan bahasa CSS dan Javascript.
+			Bahkan, beberapa perusahaan terkenal saja menggunakan bahasa pemrograman yang tadi sebutkan sebelumnya. Itulah kenapa penting banget untuk mempelajari cara kerja Artificial Intelligence sejak dini.
 			<br><br>
 			<b>Link:</b><br>
-			* <a class="link" href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
+			* <a class="link" href="https://id.wikipedia.org/wiki/Kecerdasan_buatan">Wikipedia - Kecerdasan Buatan</a><br>
 			<br><br>
 		</div>
 		
         <p class="heading" id="12" style="font-size:25px"><b>12. Pengembangan dalam Pelajaran Matematika yang Luas</b></p>
 		<div class="container2">
+		    <div class="gallery" style="width:300px;">
+                <img class="image" id="img020" src="images/soal-matematika.jpg">
+                <div class="desc" id="img020d">Gambar 20: Soal Matematika</div>
+            </div>
+			<div class="clearfix"></div><br>
 			First, we departed from <div class="tooltip">Semarang<span class="tooltiptext" id="desc01"></span></div> to <b>Batu Malang</b> by car. Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
 			<br><br>
 			Blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla blablabla.
@@ -83,6 +112,11 @@
 		
         <p class="heading" id="13" style="font-size:25px"><b>13. Sejarah dan Pengaruh Mobil Listrik di Dunia</b></p>
 		<div class="container2">
+		    <div class="gallery" style="width:300px;">
+                <img class="image" id="img021" src="images/electric-car-concept-free-vector.jpg">
+                <div class="desc" id="img021d">Gambar 21: Konsep Mobil Listrik</div>
+            </div>
+			<div class="clearfix"></div><br>
 			Mobil Listrik boleh jadi baru kalian dengar. Akan tetapi, pada masa kini Mobil Listrik masih belum berkembang pesat di Indonesia, sedangkan beberapa negara ingin seperti China atau Tiongkok sudah mulai berkembang pesat, karena kesadaran masyarakat di sana mulai menyeluruh dan teknologinya sudah berkembang pesat.
 			<br><br>
 			Secara umum, mobil listrik adalah kendaraan yang menggunakan motor listrik untuk bergerak, ditenagai oleh baterai yang dapat diisi ulang, menawarkan efisiensi energi yang tinggi dan operasi tanpa emisi gas buang langsung. Dalam sejarahnya, mobil listrik pertama kali diperkenalkan oleh produsen otomatif yang berbeda-beda tergantung pada definisi "pertama". Andreas Flocken dari Jerman memperkenalkan Flocken Elektromagen pada tahun 1888 yang dianggap sebagai mobil listrik pertama yang berfungsi penuh. Di akhir abad ke-19 hingga awal abad ke-20, mobil listrik sempat menjadi populer karena mudah dioperasikan dan tidak berisik, bahkan mencapai rekor kecepatan 100 km/jam pada tahun 1899. Namun, adanya produksi massal Fold Model 7 pada tahun 1908 dari Henny Ford dengan harga yang jauh lebih terjangkau, membuat mobil bensin lebih mudah diakses oleh masyarakat umum. Lalu pada tahun 1920-an, penemuan cadangan minyak bumi secara besar-besaran di berbagai wilayah, membuat harga bensin menjadi sangat murah. Lalu, jaringan stasiun pengisian bahan bakar berkembang pesat sementara infrastruktur listrik untuk pengisian daya mobil listrik masih sangat terbatas. Hal itulah menyebabkan jumlah mobil listrik masih minim dibanding dengan mobil bensin.
@@ -90,40 +124,59 @@
 			Di Indonesia sendiri, jumlah produksi mobil listrik masih terbatas, karena keterbatasan sumber daya alam, dan kurangnya kesadaran manusia.
 			<br><br>
 			<b>Link:</b><br>
-			* <a class="link" href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
+			* <a class="link" href="https://id.wikipedia.org/wiki/Mobil_listrik">Wikipedia - Mobil Listrik</a><br>
 			<br><br>
 		</div>
 		
-        <p class="heading" id="14" style="font-size:25px"><b>14. [Under Construction]</b></p>
-        <p class="heading" id="15" style="font-size:25px"><b>15. [Under Construction]</b></p>
-		<p class="heading" id="16" style="font-size:25px"><b>16. [Under Construction]</b></p>
-		<p class="heading" id="17" style="font-size:25px"><b>17. [Under Construction]</b></p>
-		<p class="heading" id="18" style="font-size:25px"><b>18. [Under Construction]</b></p>
-		<p class="heading" id="19" style="font-size:25px"><b>19. [Under Construction]</b></p>
-		<p class="heading" id="20" style="font-size:25px"><b>20. [Under Construction]</b></p>
+        <p class="heading" id="14" style="font-size:25px"><b>14. Holiday to Surabaya & Malang</b></p>
+		<div class="container2">
+		    <div class="gallery" style="width:300px;">
+                <img class="image" id="img022" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img022d">Gambar 22</div>
+            </div>
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img023" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img023d">Gambar 23</div>
+            </div>
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img024" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img024d">Gambar 24</div>
+            </div>
+			<div class="clearfix"></div><br>
+            <span class="color007">[Under Construction]</span>
+            <br><br><br>
+		</div>
+		
+        <p class="heading" id="15" style="font-size:25px"><b>15. Pengalaman saat Lomba Matematika UMC UNDIP 2025</b></p>
+		<p class="heading" id="16" style="font-size:25px"><b>16. Pengalaman saat Lomba Matematika KMNR dan IKMC 2025</b></p>
+		<p class="heading" id="17" style="font-size:25px"><b>17. Pengalaman saat Lomba Matematika LMNAS UGM 2025</b></p>
+		<p class="heading" id="18" style="font-size:25px"><b>18. Pengalaman saat Lomba Matematika LOGIKA UI 2025</b></p>
+		<p class="heading" id="19" style="font-size:25px"><b>19. Keistimewaan dalam Matematika</b></p>
+		<p class="heading" id="20" style="font-size:25px"><b>20. Sejarah Profil Lainnya</b></p>
         <br>
 
-        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK</b></u></p>
         <p class="heading" style="font-size:22px; margin-bottom:10px;"><b>Halaman</b></p>
         <div class="pagination heading">
-            <!-- <a href="#">&laquo;</a> -->
-            <!-- <a href="javascript:void(0)">3</a> -->
-            <!-- <a>&lt;</a> -->
             <a href="blog.html">&lt;</a>
             <a href="blog.html">1</a>
             <a class="active">2</a>
             <a href="blog3.html">3</a>
             <a href="blog3.html">&gt;</a>
-            <!-- <a href="#">&raquo;</a> -->
         </div><br><br>
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
+    <div id="myModalImage" class="modal-image">
+		<span class="close" id="imgclose">&times;</span>
+		<img class="modal-image-content" id="imgmodal">
+		<!-- <div id="caption"></div> -->
+		<div id="imgdesc" style="color:white; text-align:center; padding-top:50px;"></div>
+	</div>
     <script src="script.js"></script>
     <script src="blog-description.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-		Terakhir diupdate: 12 Desember 2025<br>
+		Terakhir diupdate: 14 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
