--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -1,44 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Website Devan</title>
+    <title>Hasil Karya - Website Devan</title>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
-<style>
-    html {
-        /* --darkmode: 0; */
-        --darkmode: 0;
-        container-name: root;
-        container-type: normal;
-    }
-    .color001 {
-        color: #146480;
-    }
-    .color002 {
-        color: #206044;
-    }
-    @container root style(--darkmode: 1) {
-        .color001 {
-            color: #60c0ff;
-        }
-        .color002 {
-            color: #80ffb0;
-        }
-    }
-</style>
 <body>
     <div class="top-container heading">
         <div class="top-container2" id="top-container2" style="height:46px;"></div>
-        <script src="script.js"></script>
         <div class="page-container">
             <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
-            <a href="fakta.html">Fakta</a>
             <a href="profil.html">Profil</a>
-            <a href="portofolio.html">Portofolio</a>
             <a class="page-selected" href="hasil-karya.html">Hasil Karya</a>
             <a href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
@@ -49,12 +25,13 @@
         </div>
     </div>
 	<div class="container">
-        <br>
-        <div class="heading color001" id="home" style="font-size:50px;"><b>Hasil Karya</b></div>
+        <div class="heading color002" id="home" style="font-size:50px;"><b>Hasil Karya</b></div>
+		<!-- <img class="imginvert disappear" style="position:absolute; right:400px; margin-top:100px; opacity:0.2; width:400px;" src="images/achievement-icon.png"> -->
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:100px; opacity:0.2; width:400px;" src="images/Achievement-icon-vector-02.svg">
         <p>
         Hasil Karya berisi karya yang sudah dibuat selama ini, seperti koding dan menggambar.
         </p><br>
-        <p class="heading color002" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
+        <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p><b>Link Hasil Karya:</b></p>
             <ol>
@@ -68,7 +45,7 @@
             </ol>
         </div>
         <br>
-        <p class="heading color002" style="font-size:30px;"><u><b>ISI HALAMAN</b></u></p>
+        <p class="heading color003" style="font-size:30px;"><u><b>ISI HALAMAN</b></u></p>
 		<p class="heading" id="1" style="font-size: 25px"><b>1. Canva</b></p>
         <div class="container2">
 			<img src="images/canva-icon.png" width="100">
@@ -222,8 +199,9 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 16 Feb 2024<br> -->
-        Terakhir diupdate: 6 Maret 2025<br>
-        Copyright © 2024 by Devan
+        <!-- Terakhir diupdate: 6 Maret 2025<br> -->
+		Terakhir diupdate: 14 Desember 2025<br>
+        Copyright © 2025 by Devan
         </p>
     </footer>
 </body>
