--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="tegGzvfEzp1jrRWlqCl-073zBm7dXku8KWcu-UEQlMc" />
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
+	<link rel="stylesheet" href="colors.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue"> -->
 </head>
 <!-- <style></style> -->
 <style>
     /* .color001 {color: #004080;} */
-	.color001 {color: #004080}
+	/* .color001 {color: #004080}
 	.colortitle {color: #004080}
     .color002 {color: #146480}
     .color003 {color: #206044}
@@ -33,7 +34,7 @@
 		.color007 {color: yellow}
 		.color008 {color: red}
 		.color009 {color: #b080ff}
-    }
+    } */
 </style>
 <body>
     <div class="top-container heading">
@@ -54,9 +55,10 @@
         </div>
     </div>
     <div class="title-container">
-        <div class="heading2 colortitle" id="home" style="font-size:50px;"><b>DEVAN</b></div><br>
+        <div class="heading-title colortitle" id="home" style="font-size:50px;"><b>DEVAN</b></div><br>
     </div>
-    <div class="container">
+    <!-- <div class="container" style="position:relative; z-index:-1"> -->
+	<div class="container">
         <!-- <br> <font class="heading" id="home" size="7" color="#004080"><b>Website Devan</b></font> -->
         <!-- <div class="heading2" id="home" style="font-size:50px; color:#004080;"><b>DEVAN</b></div> -->
         <!-- <p class="heading" style="font-size:25px; color:#000080;"> -->
@@ -65,6 +67,9 @@
             <b>Deskripsi</b>&nbsp;
             <img class="imginvert" style="vertical-align:middle;" src="images/description-icon.png" alt="Link icon" width="30">
         </p>
+		
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:0px; opacity:0.2; width:300px;" src="images/description-icon.png">
+		
         <p>
         Ini adalah program yang sudah Devan kerjakan, jumlahnya ada 8.<br>
         Semuanya berkaitan dengan Matematika dan program tersebut Devan kerjakan selama 3 tahun, selama Devan SMP.<br>
@@ -83,13 +88,14 @@
         <br><br>
         Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
 		<br><br>
-		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah. Selain itu, di versi 1.9.1, ada fitur tema gelap dan pencarian (search) Google yang baru.
+		Di versi 1.9, saya menggunakan Google Search Console supaya bisa mencari website saya dengan lebih mudah. Selain itu, di versi 1.9.1, ada fitur tema gelap dan pencarian (search) Google yang baru. Di versi selanjutnya, saya memeratakan tampilan website yang baru dan melengkapinya dengan gambar transparan supaya lebih menarik, serta memperlengkap halaman blog.
         </p><br>
 
         <p class="heading color001" style="font-size:25px;">
             <b>Link program:</b>&nbsp;
             <img class="imginvert" style="vertical-align:middle;" src="images/link.png" alt="Link icon" width="30">
         </p>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:400px; margin-top:0px; opacity:0.2; width:250px;" src="images/link.png">
         <ul>
             <li><a class="link" href="https://devandaniel9-equation-solver-4.streamlit.app/" target="_blank">Equation Solver</a> - Version 1.4</li>
             <li><a class="link" href="https://devandaniel9-number-type-detection.streamlit.app/" target="_blank">Number Type Detection</a> - Version 1.2</li>
@@ -108,6 +114,7 @@
             <b>Link yang akan datang:</b>&nbsp;
             <img class="imginvert" style="vertical-align:middle;" src="images/link.png" alt="Link icon" width="30">
         </p>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:300px; margin-top:0px; opacity:0.2; width:250px;" src="images/laptop-icon-24.png">
         <ul>
             <!-- <li style="color:darkgreen"> -->
 			<li class="color006">
@@ -143,6 +150,7 @@
             <b>Informasi halaman</b>&nbsp;
             <img class="imginvert" style="vertical-align:middle;" src="images/page.png" alt="Page icon" width="30">
         </p>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:50px; opacity:0.2; width:250px;" src="images/page.png">
         <p>Beberapa informasi dan deskripsi dalam masing-masing halaman</p>
         <!-- <p>
             Hitam: Sudah ada<br>
@@ -251,9 +259,10 @@
         <!-- <footer style=""> -->
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
-        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 12 Desember 2025<br>
-        Version: 1.9.2<br>
+        <!-- <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;"> -->
+		<p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
+        Terakhir diupdate: 14 Desember 2025<br>
+        Version: 1.9.3<br>
         Copyright © 2025 by Devan
 		<!-- Terakhir diupdate: 30 Mei 2024<br>
         Version: 1.8.1<br>
