--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Devan</title>
+    <title>Projects - Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -59,7 +59,7 @@
     <div class="container">
         <!-- <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Projects</b></div> -->
         <div class="heading" id="home" style="font-size:50px;"><b>Projects</b></div>
-		<img class="disappear" style="position:absolute; right:400px; padding-top:100px; opacity:0.2; width:400px; rotate:10deg;" src="images/project-icon.png">
+		<img class="disappear unselectable" style="position:absolute; right:200px; margin-top:100px; opacity:0.2; width:400px; rotate:10deg;" src="images/project-icon.png">
         <p>
         Halaman Projects ini berisi kumpulan Project yang sudah dibuat sebelumnya, seperti program Streamlit, halaman website kecil, menghitung BMI, penghitung waktu, permainan, dan kumpulan animasi.
 		<br><br>
@@ -79,8 +79,10 @@
                 <li><a class="link" href="#6">Penghitung Waktu</a></li>
                 <li><a class="link" href="#7">Labirin</a></li>
                 <li><a class="link" href="#8">Kumpulan Animasi</a></li>
-                <li><a class="link" href="#9">Kalkulator Sederhana</a></li>
-                <li><a class="link" href="#10">Project dari Website Lain</a></li>
+                <li><a class="link" href="#9">Kalkulator Peluang</a></li>
+                <li><a class="link" href="#10">Kalkulator Sederhana</a></li>
+				<li><a class="link" href="#11">Tes Kognitif dan Visual</a></li>
+				<li><a class="link" href="#12">Tanggal Matematika</a></li>
             </ol>
         </div>
 		<br><br>
@@ -134,7 +136,8 @@
         </div><br>
         <p class="heading" id="5" style="font-size: 25px"><b>5. Soal Matematika</b></p>
         <div class="container2">
-			<img src="images/soal-matematika.jpg" width="200">
+			<img src="projects/images/soal-matematika.jpg" width="200">
+			<img src="projects/images/calculator.png" style="padding-left:50px; padding-bottom:10px;" width="100">
             <div class="clearfix"></div>
             <p>Soal Pertanyaan dalam Matematika berisi beberapa jenis pertanyaan, yaitu penjumlahan, pengurangan, perkalian, pembagian, dan sebagainya. Lalu ada tingkat kesulitan yang berbeda-beda, dan terdiri dari isian dan pilihan ganda. Selain itu, ada timer untuk setiap soal pada pengaturan.</p>
             <a class="link" href="projects/Soal Matematika.html">Soal Matematika</a>
@@ -164,10 +167,18 @@
             <p>Kalkulator Sederhana<br>Bulan dibuat: Mei 2024</p>
             <a class="link" href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana</a>
         </div><br>
-		<p class="heading" id="11" style="font-size: 25px"><b>11. Project dari Website Lain (v1.9)</b></p>
-        <div class="container2"><p><i>Coming Soon</i></p></div>
-        <p class="heading" id="12" style="font-size: 25px"><b>12. [Coming Soon] (v1.10)</b></p>
-        <div class="container2"><p><i>Coming Soon</i></p></div>
+		<p class="heading" id="11" style="font-size: 25px"><b>11. Tes Kognitif dan Visual</b></p>
+        <div class="container2">
+		    <img src="projects/images/soal-matematika.jpg" width="200">
+			<img src="projects/images/visual-icon.png" class="imginvert" style="padding-left:50px;" width="120">
+            <p>Tes Kognitif dan Visual<br>Bulan dibuat: November 2025</p>
+            <a class="link" href="projects/Kalkulator Sederhana.html">Kalkulator Sederhana</a>
+        </div><br>
+        <p class="heading" id="12" style="font-size: 25px"><b>12. Tanggal Matematika (v1.10)</b></p>
+        <div class="container2">
+            <p>Tanggal Matematika</p>
+            <a class="link" href="projects/Tanggal Matematika.html">Tanggal Matematika</a>
+        </div><br>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 		
@@ -199,7 +210,7 @@
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 13 Nov 2024<br> -->
         <!-- Terakhir diupdate: 14 Feb 2025<br> -->
-        Terakhir diupdate: 12 Desember 2025<br>
+        Terakhir diupdate: 14 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
