--- a/timeline.html
+++ b/timeline.html
@@ -1,44 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Devan</title>
+    <title>Timeline - Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
-<style>
-    html {
-        /* --darkmode: 0; */
-        --darkmode: 0;
-        container-name: root;
-        container-type: normal;
-    }
-    .color001 {
-        color: #146480;
-    }
-    .color002 {
-        color: #206044;
-    }
-    @container root style(--darkmode: 1) {
-        .color001 {
-            color: #60c0ff;
-        }
-        .color002 {
-            color: #80ffb0;
-        }
-    }
-</style>
 <body>
     <div class="top-container heading">
         <div class="top-container2" id="top-container2" style="height:46px;"></div>
-        <script src="script.js"></script>
         <div class="page-container">
             <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
-            <a href="fakta.html">Fakta</a>
             <a href="profil.html">Profil</a>
-            <a href="portofolio.html">Portofolio</a>
             <a href="hasil-karya.html">Hasil Karya</a>
             <a class="page-selected" href="timeline.html">Timeline</a>
             <a href="updates.html">Updates</a>
@@ -49,9 +25,9 @@
         </div>
     </div>
     <div class="container">
-        <br>
         <!-- <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Timeline dan Sejarah</b></div> -->
-        <div class="heading color001" id="home" style="font-size:50px;"><b>Timeline dan Sejarah</b></div>
+        <div class="heading color002" id="home" style="font-size:50px;"><b>Timeline dan Sejarah</b></div>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:100px; opacity:0.2; width:400px;" src="images/history-icon.png">
         <p>
         Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.<br>
         Ada berbagai timeline dari SD sampai sekarang, ada di halaman ini.
@@ -60,8 +36,8 @@
 		<a class="link" href="timeline-math.html">Timeline Matematika</a>
 		</p><br>
 		
-        <!-- <p class="heading color001" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p> -->
-        <p class="heading color002" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
+        <!-- <p class="heading color002" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p> -->
+        <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p><b>Link timeline:</b></p>
             <ol>
@@ -75,7 +51,7 @@
             </ol>
         </div>
         <br>
-        <p class="heading color002" style="font-size:30px;"><u><b>ISI HALAMAN</b></u></p>
+        <p class="heading color003" style="font-size:30px;"><u><b>ISI HALAMAN</b></u></p>
         <p class="heading" id="1" style="font-size: 25px"><b>1. Sebelum 2020</b></p>
         <p class="heading" id="2" style="font-size: 25px"><b>2. Tahun 2020</b></p>
         <div class="container2">
@@ -192,7 +168,8 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 26 Mei 2024<br> -->
-        Terakhir diupdate: 25 April 2025<br>
+        <!-- Terakhir diupdate: 25 April 2025<br> -->
+		Terakhir diupdate: 14 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
