--- a/updates.html
+++ b/updates.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Devan</title>
+    <title>Updates - Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
@@ -14,9 +15,7 @@
         <div class="page-container">
             <a href="index.html">Home</a>
             <a href="blog.html">Blog</a>
-            <a href="fakta.html">Fakta</a>
             <a href="profil.html">Profil</a>
-            <a href="portofolio.html">Portofolio</a>
             <a href="hasil-karya.html">Hasil Karya</a>
             <a href="timeline.html">Timeline</a>
             <a class="page-selected" href="updates.html">Updates</a>
@@ -25,35 +24,45 @@
         </div>
     </div>
     <div class="container">
-        <br>
-        <div class="heading" id="home" style="font-size:50px; color:#14806a;"><b>Updates dan Progress</b></div>
+        <!-- <div class="heading" id="home" style="font-size:50px; color:#14806a;"><b>Updates dan Progress</b></div> -->
+		<div class="heading color002" id="home" style="font-size:50px;"><b>Updates dan Progress</b></div>
+		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:100px; opacity:0.2; width:400px;" src="images/update-icon.png">
         <p>
         Updates dan Progress berisi update-update dan kemajuan di website ini.
         </p>
-        <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <!--
+		<p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p> 
+		<li><a class="link" href="#11">Version 1.9</a> <span style="color:green">(Baru!)</span></li>
+		<p class="heading color003" style="font-size:30px; color:hsl(154, 50%, 25%);"><u><b>ISI HALAMAN</b></u></p>
+		-->
+		<p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
-            <p>
-            <a href="#9">Version 1.8</a> <span style="color:green">(Baru!)</span><br>
-            <a href="#8">Version 1.7</a><br>
-            <a href="#7">Version 1.6</a><br>
-            <a href="#6">Version 1.5</a><br>
-            <a href="#5">Version 1.4</a><br>
-            <a href="#4">Version 1.3</a><br>
-            <a href="#3">Version 1.2</a><br>
-            <a href="#2">Version 1.1</a><br>
-            <a href="#1">Version 1.0</a>
-            </p>
+            <p><b>Link timeline:</b></p>
+			<ul>
+			    <li><a class="link" href="#11">Version 1.9</a> <span class="color006">(Baru!)</span></li>
+				<li><a class="link" href="#10">Version 1.8</a></li>
+				<li><a class="link" href="#9">Version 1.7</a></li>
+				<li><a class="link" href="#8">Version 1.6</a></li>
+				<li><a class="link" href="#7">Version 1.5</a></li>
+				<li><a class="link" href="#6">Version 1.4</a></li>
+				<li><a class="link" href="#5">Version 1.3</a></li>
+				<li><a class="link" href="#4">Version 1.2</a></li>
+				<li><a class="link" href="#3">Version 1.1</a></li>
+				<li><a class="link" href="#2">Version 1.0</a></li>
+				<li><a class="link" href="#1">Version 0 (Beta)</a></li>
+			</ul>
         </div>
         <br>
-        <p class="heading" style="font-size:30px; color:hsl(154, 50%, 25%);"><u><b>ISI HALAMAN</b></u></p>
-        <p class="heading" id="8" style="font-size: 25px"><b>Version 1.8</b></p>
+        <p class="heading color003" style="font-size:30px;"><u><b>ISI HALAMAN</b></u></p>
+		<p class="heading" id="11" style="font-size: 25px"><b>Version 1.9</b></p>
+        <p class="heading" id="10" style="font-size: 25px"><b>Version 1.8</b></p>
         <p>Memperbagus design website, mengubah sebagian font teksnya, dan membuat kalkulator sederhana</p>
         <div class="image">
             <img src="progress/2024-05-24-2.png" width="500">
             <img src="progress/2024-05-24.png" width="500">
             <img src="progress/2024-03-29.png" width="500">
         </div>
-        <p class="heading" id="8" style="font-size: 25px"><b>Version 1.7</b></p>
+        <p class="heading" id="9" style="font-size: 25px"><b>Version 1.7</b></p>
         <p>Menambahkan halaman timeline dan updates, dan mengubah font menjadi 3 font yang berbeda</p>
         <!-- <div class="container2"> -->
         <div class="image">
@@ -65,66 +74,51 @@
             <img src="progress/2023-09-17-3.png" width="500">
             <img src="progress/2023-09-15-3.png" width="500">
         </div>
-        <p class="heading" id="7" style="font-size: 25px"><b>Version 1.6</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>Version 1.6</b></p>
         <p>Menambahkan menu dropdown dan fade warna background di atas</p>
         <div class="image">
             <img src="progress/2023-09-15-2.png" width="500">
             <img src="progress/2023-09-15.png" width="500">
             <img src="progress/2023-08-30.png" width="500">
         </div>
-        <p class="heading" id="6" style="font-size: 25px"><b>Version 1.5</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>Version 1.5</b></p>
         <div class="image">
             <img src="progress/2023-08-25.png" width="500">
         </div>
-        <p class="heading" id="5" style="font-size: 25px"><b>Version 1.4</b></p>
+        <p class="heading" id="6" style="font-size: 25px"><b>Version 1.4</b></p>
         <div class="image">
             <img src="progress/2023-08-21-2.png" width="500">
             <img src="progress/2023-08-21.png" width="500">
         </div>
 
-        <p class="heading" id="4" style="font-size: 25px"><b>Version 1.3</b></p>
+        <p class="heading" id="5" style="font-size: 25px"><b>Version 1.3</b></p>
 
-        <p class="heading" id="3" style="font-size: 25px"><b>Version 1.2</b></p>
+        <p class="heading" id="4" style="font-size: 25px"><b>Version 1.2</b></p>
         <p>Menambahkan halaman blog</p>
         <div class="image">
             <img src="progress/2023-08-01-2.png" width="500">
             <img style="border: 2px solid black;" src="progress/2023-08-01.png" width="500">
         </div>
-        <p class="heading" id="2" style="font-size: 25px"><b>Version 1.1</b></p>
+        <p class="heading" id="3" style="font-size: 25px"><b>Version 1.1</b></p>
         <div class="image">
             <img src="progress/2023-04-28.png" width="500">
         </div>
-        <p class="heading" id="1" style="font-size: 25px"><b>Version 1.0</b></p>
+        <p class="heading" id="2" style="font-size: 25px"><b>Version 1.0</b></p>
         <div class="image">
             <img src="progress/2023-04-05.png" width="500">
             <img src="progress/2023-04-13.png" width="500">
         </div>
-        <br>
-
-        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box heading">
-            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
-            <div class="btn-group">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-                <a href="hasil-karya.html">Hasil Karya</a>
-                <a href="timeline.html">Timeline</a>
-                <a class="selected">Updates</a>
-                <a href="projects.html">Projects</a>
-            </div>
-            <div class="clearfix"></div><br>
-        </div>
-        <br>
+		<p class="heading" id="2" style="font-size: 25px"><b>Version 0 (Beta)</b></p>
+        <br><br>
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 1 Feb 2024<br>
-        Copyright © 2023 by Devan
+        <!-- Terakhir diupdate: 1 Feb 2024<br>
+		Copyright © 2023 by Devan -->
+		Terakhir diupdate: 14 Desember 2025<br>
+        Copyright © 2025 by Devan
         </p>
     </footer>
 </body>
